name:                online-typechecker
version:             0.1.0.0
synopsis:            in-browser live typechecking editor for Idris
-- description:         
homepage:            https://github.com/LeifW/online-typechecker
license:             MIT
license-file:        LICENSE
author:              Leif Warner
maintainer:          abimelech@gmail.com
-- copyright:           
category:            Development
build-type:          Simple
cabal-version:       >=1.10

executable online-typechecker
  main-is:           index.hs  
  other-modules:     IdrisClient
  default-language:  Haskell2010
  build-depends:     base ==4.6.*,
                     process,
                     bytestring,
                     text,
                     network,
                     monad-loops ==0.4.*,
                     http-types,
                     conduit,
                     wai,
                     wai-app-static,
                     warp
